Improve Tuning Advisor calculators
Add virtual-thread-aware JVM sizing, Kubernetes percentage-based heap recommendations, and deployment toggles for Burstable resources and Actuator probes.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>